Recent changes:

Key:  
     - Something removed
     + Something added
     * Something changed / fixed

Coming soon: (?) (my list of stuff to do soon...)
 + Client menus
 + Configuration file support
 * Better syntax for driver parameters
 * Dynamically-loaded driver system

v0.4-pre10:
 * Merged Andrew McMeikan's HD44780 driver changes
 - Removed WHATSNEW
 + Added ChangeLog (okay, fine, I renamed WHATSNEW and typed a few
   entries into it :)

V0.4-pre9:
 * small fixes for irix
 * Added flag in LCDd to shut off server screen:  
 	"-i off" or "--serverinfo off"
 + Wirz SLI driver
 + 16x2 support (server only)
 + MtxOrb generic output support in driver
 * Misc libc5 fixes
 + support for arbitrary display sizes; anything 16-80 characters
   wide, and 2-25 characters tall.  (doesn't work if you try to use
   a display size bigger than your LCD..  :)
 * curses driver looks slightly better (titles)
 * sizes > 20x4 no longer crash

V0.4-pre8:
 * LCDd gives more updated info in the connect string: 
	cell size, lcd dimensions.
 * bargraphs are now the correct length on CFontz displays, in the main
   lcdproc client.  For other clients, please parse the connect string!
 * MtxOrb driver supports simultaneous vbars/hbars now, with a
   mechanism to automatically use custom characters for as many
   as possible.
 + 20x2 support in LCDd!  Use "--type 20x2".
	(LCDd --type 20x2 -d MtxOrb )
 * LCDd can change backlight brightness instead of shutting it "off"
 * HD44780 should work again (LCDd forks earlier now.. oops  :)
 + 20x2 support in lcdproc client for the following screens:
	C G T M X D B S U A
   Support will not be added for K and O screens.
 + BSD support (?)
 * 20x4 screens should display correctly on 40x4 displays

V0.4-pre7: new driver
 + CrystalFontz (CFontz) LCD driver added
 * Backlight control improved
 + Brightness control added

V0.4-pre6:
 + Backlight control added.  Modes so far are "on", "off", and "open".